--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 "start": "node index.js"
 },
 "dependencies": {
-"express": "^4.18.2",
-"swisseph": "1.1.1"
+"swisseph": "0.5.17",
+"express": "^4.18.2"
 }
 }
