--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-"name": "swisseph-api",
-"version": "1.0.0",
-"main": "index.js",
-"scripts": {
-"start": "node index.js"
-},
-"dependencies": {
-"swisseph": "0.5.17",
-"express": "^4.18.2"
-}
+  "name": "swisseph-api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "swisseph": "0.5.17",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": "18.x"
+  }
 }
