--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "npm rebuild"
+    "start": "node index.js"
   },
   "dependencies": {
-    "swisseph": "0.5.17",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "swisseph": "0.5.17"
   },
   "engines": {
     "node": "18.x"
