--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "swisseph": "0.5.17"
+    "sweph": "^2.10.3"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=14.0.0"
   }
 }
